[metadata]
name = Blue Box Horizon Customization Module
version = 1.0.0
author = David Cusatis
author-email = dcusati@us.ibm.com
summary = A customization module for OpenStack Horizon
description-file = README.rst
home-page = https://github.com/davidcusatis/bluebox-horizon-customization
license = Apache-2
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    bluebox_horizon_customization
